nginx-rtmp/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-rtmp
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged

spec:
  finalizers:
  - kubernetes
